--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
       href="img/favicon-16x16.png"
     />
     <link rel="manifest" href="img/site.webmanifest" />
+<script src="/script.js" defer></script>
   </head>
   <body>
-    <script src="/script.js"></script>
+    
   </body>
 </html>
