--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       href="img/favicon-16x16.png"
     />
     <link rel="manifest" href="img/site.webmanifest" />
-<script src="/script.js" defer></script>
+    <script src="/script.js"></script>
   </head>
   <body>
     
