--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@
     
   </head>
   <body>
-    <script src="/script.js"></script>
+    <script src="script.js" defer></script>
   </body>
 </html>
